[package]
name = "days"
version = "0.1.0"
edition = "2021"
authors = ["Rob Wells <rob@robjwells.com>"]
description = "Utility to print the number of days between two dates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
